--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h3 {
 p {
   line-height: 1.5em;
   margin: 0;
+  padding-bottom: 20px;
 }
 
 section {
@@ -32,7 +33,8 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 /* ---  Groups & Items --- */
@@ -65,6 +67,14 @@ header {
   color: #ecdbc9;
 }
 
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
 header nav ul li {
   list-style-type: none;
 }
@@ -88,11 +98,16 @@ form {
 
 form label {
   font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 form select,
 form input {
-  margin-bottom: 20px;
   width: 180px;
 }
 
@@ -118,3 +133,39 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 480px) {
+  h2 {
+    width: 100%;
+  }
+
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  .logo {
+    font-size: 48px;
+  }
+
+  header nav ul {
+    padding-bottom: 0;
+  }
+
+  section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .about-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+}
